Removing old sun.mic packages to compile to java 8